# programs

./: cscope.files  cscope.out  tags  utils.c  utils.h  ~
System Design/: questions.txt  system_design_framework.txt
affirm_coding_challenge/: .~lock.assignment.csv#  README.txt  assignLoans.py  out  yield.csv
backtracking/: Makefile  backtracking  backtracking.c  letterCombinationOfPhone.py  permutStrings.py  permutStringsDistinct.py  permutStringsDuplicates.py  subsetString.py
binary_search/: Makefile  binary_search  binary_search.c
bits/: Makefile  bits  bits.c  buddy  buddyBitmap.c  buddyBitmapOptimized.cpp  buddybitmap.cpp  command
bloom_filter/: .README.txt.swp  README.txt
circular_buffer/: .circular_buffer.c.swp  Makefile  cbuffer  circular_buffer.c  circular_buffer.cpp
design-patters/observer/: CMakeLists.txt
design-patters/observer/inc/: AbstractPublisher.hpp  AbstractSubscriber.hpp  ConcretePublisher.hpp  ConcreteSubscriber.hpp
design-patters/observer/src/: main.cpp
design_questions/: questions.txt
dynammic-programming/: .dynamic.c.swp  .longestDecreasingSubsequence.c.swp  .longestIncreasingSubsequence.c.swp  Makefile  `  dynamic  dynamic.c  longestDecreasingSubsequence  longestDecreasingSubsequence.c  longestIncreasingSubsequence  longestIncreasingSubsequence.c  maxSumIncresingSeqDynamic  maxSumIncresingSeqDynamic.c  minCostPath_recursive  minCostPath_recursive.c  (+1 more)
matic/shell/: CMakeLists.txt  README.txt  output.txt
matic/shell/inc/: LogHelper.hpp  Logger.hpp  Shell.hpp  utils.hpp
matic/shell/src/: CMakeLists.txt  Shell.cpp  main.cpp
(+539 files in other folders)
